test/golden96/fooNLbliBSPbar.16759496276764189145.golden

INITIALPATH:8:4: error:
    • Lexical error in literal section
    • In the quasi-quotation: [fmt|foo
bli\Pbar|]
  |
8 | bli\Pbar|]
  |    ^
